fixes out of place like and dislike buttons

--- a/CCAPDEV-MCO1-Taft_Eats-testing/Taft Eats/css/main.css
+++ b/CCAPDEV-MCO1-Taft_Eats-testing/Taft Eats/css/main.css
@@ -1117,8 +1117,9 @@ a.nav_link:hover {
 .restaurant-vote {
     display: flex;
     gap: var(--space-md);
-    margin: var(--space-md) 0;
+    margin-top: var(--space-lg);
     flex-wrap: wrap;
+    justify-content: center;
 }
 
 .rest-like-btn,
